fix: windows not showing update icon

--- a/src/renderer/layout/titlebar/right/index.module.css
+++ b/src/renderer/layout/titlebar/right/index.module.css
@@ -26,3 +26,7 @@
   margin-left: auto;
   min-width: 28px;
 }
+
+.window-controls-container {
+  width: calc(138px / var(--zoom-factor, 1));
+}
